      used by free Unix kernels.  The wasted space in a buffer with
      1mb of data will now be more like 8k than 1mb.  The new
      implementation also avoids realloc();realloc(); patterns that
      can contribute to memory fragmentation.

  o Minor performance improvements:
    - Reference-count and share copies of address policy entries; only
      5% of them were actually distinct.

  o Minor bugfixes:
    - When an authority has not signed a consensus, do not try to
      download a nonexistant "certificate with key 00000000".  Bugfix
      on 0.2.0.x. Fixes bug 569.

  o Minor features (controller):
    - Get NS events working again.  (Patch from tup)

Changes in version 0.2.0.15-alpha - 2007-12-25
  o Major bugfixes:
    - Fix several remotely triggerable asserts based on DirPort requests
      for a v2 or v3 networkstatus object before we were prepared. This
      was particularly bad for 0.2.0.13 and later bridge relays, who
      would never have a v2 networkstatus and would thus always crash
      when used. Bugfixes on 0.2.0.x.
    - Estimate the v3 networkstatus size more accurately, rather than
      estimating it at zero bytes and giving it artificially high priority
      compared to other directory requests. Bugfix on 0.2.0.x.

  o Minor bugfixes:
    - Fix configure.in logic for cross-compilation.
    - When we load a bridge descriptor from the cache, and it was
      previously unreachable, mark it as retriable so we won't just
      ignore it. Also, try fetching a new copy immediately. Bugfixes
      on 0.2.0.13-alpha.
    - The bridge GeoIP stats were counting other relays, for example
      self-reachability and authority-reachability tests.

  o Minor features:
    - Support compilation to target iPhone; patch from cjacker huang.
      To build for iPhone, pass the --enable-iphone option to configure.


Changes in version 0.2.0.14-alpha - 2007-12-23
  o Major bugfixes:
    - Fix a crash on startup if you install Tor 0.2.0.13-alpha fresh