@@ -94,6 +94,7 @@
 /** Callback type used for add_callback_log. */
 typedef void (*log_callback)(int severity, uint32_t domain, const char *msg);
 
+void init_logging(void);
 int parse_log_level(const char *level);
 const char *log_level_to_string(int level);
 void add_stream_log(int severityMin, int severityMax, const char *name,
